<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#F5FFFA">

        <ImageView
            android:id="@+id/mode_image"
            android:contentDescription="@null"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/training_img"/>

        <LinearLayout
            android:id="@+id/correct_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/correct_img"
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/correct_img"
                android:scaleType="fitCenter"/>
            <TextView
                android:id="@+id/correct_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrong_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/wrong_img"
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wrong_img"
                android:scaleType="fitCenter"/>
            <TextView
                android:id="@+id/wrong_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="vertical">
            <TextView
                android:id="@+id/count_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/count_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/num1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="50sp"/>
        <TextView
            android:id="@+id/times"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/times_sign"
            android:textSize="50sp"/>
        <TextView
            android:id="@+id/num2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="50sp"/>
        <TextView
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/equal"
            android:textSize="50sp"/>
        <TextView
            android:id="@+id/answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:background="#FFE4E1"
            android:textSize="55sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/one"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/one"
             android:textSize="@dimen/activity_primary_number"/>
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/two"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/two"
             android:textSize="@dimen/activity_primary_number"/>
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/three"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/three"
             android:textSize="@dimen/activity_primary_number"/>
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/four"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/fore"
             android:textSize="@dimen/activity_primary_number"/>
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/five"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/five"
             android:textSize="@dimen/activity_primary_number"/>
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/six"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/six"
             android:textSize="@dimen/activity_primary_number"/>
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/seven"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/seven"
             android:textSize="@dimen/activity_primary_number"/>
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/eight"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/eight"
             android:textSize="@dimen/activity_primary_number"/>
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/nine"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/nine"
             android:textSize="@dimen/activity_primary_number"/>
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/back"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/left"
             android:textColor="#191970"
             android:textSize="@dimen/activity_primary_number" />
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/zero"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/zero"
             android:textSize="@dimen/activity_primary_number" />
         <Button
             style="?android:attr/buttonBarButtonStyle"
             android:id="@+id/forward"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/right"
             android:textColor="#191970"
             android:textSize="@dimen/activity_primary_number" />

     </LinearLayout>
        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/ok"
            android:textColor="#00FF00"
            android:background="#191970"
            android:textSize="35sp" />
    </LinearLayout>
</LinearLayout>