<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aufthesis.multiplication.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/training"
        android:textSize="@dimen/activity_main"
        android:layout_marginBottom="10dp"
        android:background="#191970"
        android:textColor="#FFBB33"
        android:id="@+id/training"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/mastery"
        android:textSize="@dimen/activity_main"
        android:layout_marginBottom="10dp"
        android:background="#191970"
        android:textColor="#FF4444"
        android:layout_below="@id/training"
        android:id="@+id/mastery"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/training"
        android:text="@string/primary"
        android:textSize="@dimen/activity_main"
        android:layout_marginBottom="10dp"
        android:background="#191970"
        android:textColor="#33B5E5"
        android:id="@+id/primary"/>

    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@null"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/header_image"
        android:paddingBottom="10dp"
        android:layout_above="@id/primary"/>

    <Button
        android:id="@+id/challenge_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/challenge10"
        android:textSize="30sp"
        android:layout_below="@id/mastery"
        android:layout_marginTop="@dimen/activity_main"
        android:background="#191970"
        android:textColor="#FFFFFF"
        />

    <com.google.android.gms.ads.AdView
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/adView2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/challenge_questions"
    ads:adUnitId="@string/adUnitId"
    ads:adSize="BANNER" />

    <!--ads:adUnitId="ca-app-pub-1485554329820885/9952380258"本番-->
    <!--ads:adUnitId="ca-app-pub-3940256099942544/6300978111"test-->

    <TextView
        android:id="@+id/version_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/adView2"
        android:gravity="end"/>

</RelativeLayout>
