<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/learn"
        android:textSize="@dimen/activity_primary_number"/>

    <ImageView
        android:id="@+id/mode_image"
        android:contentDescription="@null"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:src="@drawable/pencil"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/isRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random"
            android:layout_gravity="end"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_TimesTables"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:background="#FFFFFF">

    </ListView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adUnitId="@string/adUnitId"
        ads:adSize="BANNER" />

    <!--ads:adUnitId="ca-app-pub-1485554329820885/9952380258"本番-->
    <!--ads:adUnitId="ca-app-pub-3940256099942544/6300978111"test-->

</LinearLayout>